--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div class="s2" style="align-items: center; align-self: center; text-align: justify; font-family: cursive;">
             <p>Step 1: Click on the Button named Create</p>
             <p>Step 2: Use your mouse to click and create a dot</p>
-            <p>Step 3: Create three dots to create a triangles</p>
+            <p>Step 3: Create three dots to create a triangle</p>
             <p>Step 4: Press on the Clear Button to clear the screen and re do.</p>
             <p>Step 5: Repeat the process</p>
             <p>Note: After 3 seconds the triangle disappears.</p>
